# apache-airflow-kubernetes-example

./: Dockerfile  README.md  airflow-test-env-init.sh  bootstrap.sh  pyproject.toml
kube/: apply.sh  deploy.sh
kube/sample_build/: configmaps.yaml
kube/templates/: airflow.template.yaml  configmaps.template.yaml  init_git_sync.template.yaml
